--- a/src/EventPlanning.Web/wwwroot/css/site.css
+++ b/src/EventPlanning.Web/wwwroot/css/site.css
@@ -8,6 +8,7 @@
 @import url('components/cards.css');
 @import url('components/profile.css');
 @import url('components/auth.css');
+@import url('components/dashboard.css');
 
 @import url('layout/navbar.css');
 @import url('layout/hero.css');
