--- a/src/EventPlanning.Web/Views/Profile/Index.cshtml
+++ b/src/EventPlanning.Web/Views/Profile/Index.cshtml
@@ -81,28 +81,37 @@
                             <div class="row g-4">
                                 <div class="col-md-6">
                                     <label asp-for="FirstName" class="form-label-profile">First Name</label>
-                                    <input asp-for="FirstName" class="form-control" placeholder="Enter first name" />
+                                    <div class="profile-input-group">
+                                        <span class="input-group-text"><i class="bi bi-person"></i></span>
+                                        <input asp-for="FirstName" class="form-control" placeholder="Enter first name" />
+                                    </div>
                                     <span asp-validation-for="FirstName" class="text-danger small mt-1 d-block"></span>
                                 </div>
 
                                 <div class="col-md-6">
                                     <label asp-for="LastName" class="form-label-profile">Last Name</label>
-                                    <input asp-for="LastName" class="form-control" placeholder="Enter last name" />
+                                    <div class="profile-input-group">
+                                        <span class="input-group-text"><i class="bi bi-person"></i></span>
+                                        <input asp-for="LastName" class="form-control" placeholder="Enter last name" />
+                                    </div>
                                     <span asp-validation-for="LastName" class="text-danger small mt-1 d-block"></span>
                                 </div>
 
                                 <div class="col-12">
                                     <label asp-for="PhoneNumber" class="form-label-profile">Phone Number</label>
-                                    <div class="input-group">
-                                        <span class="input-group-text bg-light border-end-0"><i class="bi bi-telephone text-muted"></i></span>
-                                        <input asp-for="PhoneNumber" class="form-control border-start-0 ps-0" placeholder="+1 (555) 000-0000" />
+                                    <div class="profile-input-group">
+                                        <span class="input-group-text"><i class="bi bi-telephone"></i></span>
+                                        <input asp-for="PhoneNumber" class="form-control" placeholder="+1 (555) 000-0000" />
                                     </div>
                                     <span asp-validation-for="PhoneNumber" class="text-danger small mt-1 d-block"></span>
                                 </div>
 
                                 <div class="col-12">
                                     <label class="form-label-profile">Email Address</label>
-                                    <input asp-for="Email" class="form-control bg-light text-muted" readonly disabled />
+                                    <div class="profile-input-group">
+                                        <span class="input-group-text"><i class="bi bi-envelope"></i></span>
+                                        <input asp-for="Email" class="form-control bg-transparent text-muted" readonly disabled />
+                                    </div>
                                     <div class="form-text small mt-2">
                                         <i class="bi bi-info-circle me-1"></i> Email cannot be changed directly for security reasons.
                                     </div>
@@ -129,18 +138,27 @@
 
                             <div class="mb-4">
                                 <label class="form-label-profile">Current Password</label>
-                                <input name="CurrentPassword" type="password" class="form-control" required />
+                                <div class="profile-input-group">
+                                    <span class="input-group-text"><i class="bi bi-lock"></i></span>
+                                    <input name="CurrentPassword" type="password" class="form-control" required />
+                                </div>
                             </div>
 
                             <div class="row g-4 mb-4">
                                 <div class="col-md-6">
                                     <label class="form-label-profile">New Password</label>
-                                    <input name="NewPassword" type="password" class="form-control" required />
+                                    <div class="profile-input-group">
+                                        <span class="input-group-text"><i class="bi bi-key"></i></span>
+                                        <input name="NewPassword" type="password" class="form-control" required />
+                                    </div>
                                     <div class="form-text small mt-1">Must be at least 6 characters long.</div>
                                 </div>
                                 <div class="col-md-6">
                                     <label class="form-label-profile">Confirm New Password</label>
-                                    <input name="ConfirmPassword" type="password" class="form-control" required />
+                                    <div class="profile-input-group">
+                                        <span class="input-group-text"><i class="bi bi-check-lg"></i></span>
+                                        <input name="ConfirmPassword" type="password" class="form-control" required />
+                                    </div>
                                 </div>
                             </div>
 
