feat(ui): redesign edit event page with unified input styles and icons

--- a/src/EventPlanning.Web/wwwroot/css/site.css
+++ b/src/EventPlanning.Web/wwwroot/css/site.css
@@ -9,6 +9,7 @@
 @import url('components/profile.css');
 @import url('components/auth.css');
 @import url('components/dashboard.css');
+@import url('components/event-form.css');
 
 @import url('layout/navbar.css');
 @import url('layout/hero.css');
