--- a/src/EventPlanning.Web/Views/_ViewImports.cshtml
+++ b/src/EventPlanning.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using EventPlanning.Web
 @using EventPlanning.Web.Models
+@using EventPlanning.Web.Extensions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
